--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@nuxt/image": "^1.8.1",
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.2",
+    "@nuxtjs/supabase": "^1.4.3",
     "@sidebase/nuxt-auth": "^0.9.4",
+    "formidable": "^3.5.2",
     "nuxt": "^3.14.0",
     "vue": "latest",
     "vue-router": "latest"
